--- a/update.properties
+++ b/update.properties
@@ -1,4 +1,4 @@
 id=de.thm.SRE_Plugin
 version=1.0.0
-download=http://co-ode-owl-plugins.googlecode.com/files/org.coode.annotate_1_0_4.zip
+download=https://github.com/KITE-Cloud/SRE/releases/download/1.0/SRE_Plugin-1.0.jar
 name=sretab-plugin
