--- a/update.properties
+++ b/update.properties
@@ -2,3 +2,4 @@ id=de.thm.SRE_Plugin
 version=1.0.0
 download=https://github.com/KITE-Cloud/SRE/releases/download/1.0/SRE_Plugin-1.0.jar
 name=sretab-plugin
+author=Jannik Geyer, Technische Hochschule Mittelhessen
