--- a/update.properties
+++ b/update.properties
@@ -1,5 +1,5 @@
 id=de.thm.SRE_Plugin
-version=1.0.0
+version=0.1.0
 download=https://github.com/KITE-Cloud/SRE/releases/download/1.0/SRE_Plugin-1.0.jar
-name=sretab-plugin
+name=SRE Plugin
 author=Jannik Geyer, Technische Hochschule Mittelhessen
