--- a/update.properties
+++ b/update.properties
@@ -3,3 +3,5 @@ version=0.1.0
 download=https://github.com/KITE-Cloud/SRE/releases/download/1.0/SRE_Plugin-1.0.jar
 name=SRE Plugin
 author=Jannik Geyer, Technische Hochschule Mittelhessen
+license=https://raw.githubusercontent.com/KITE-Cloud/SRE/master/LICENSE
+readme=https://raw.githubusercontent.com/KITE-Cloud/SRE/master/README.md
