Manifest removed and automated via maven goal bundle:install

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,15 @@
                         </Import-Package>
                     </instructions>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
