--- a/update.properties
+++ b/update.properties
@@ -1,4 +1,4 @@
-id=de.thm.SRE_Plugin
+id=de.thm.sre_plugin
 version=0.2.0
 download=https://github.com/KITE-Cloud/SRE/releases/download/0.2.0/sre_plugin-0.2.0.jar
 name=SRE Plugin
