--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <swrlapi.version>2.0.5</swrlapi.version>
         <swrlapi.drools.version>2.0.5</swrlapi.drools.version>
+        <jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
     </properties>
 
     <build>
